Add id to ul and style Home

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,5 +53,17 @@ footer {
     background-color: orange;
 }
 
-/* Google fonts */
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+    list-style-type: none;
+}
+
+#menu > li {
+    margin-bottom: 1em;
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
+}
 
