--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,32 @@ main {
     color: #ffffff;
 }
 
+/* WHY LOVE RUNNING WITH US? sections */
+#reasons {
+    margin: 20px auto;
+    width: 90%;
+}
+
+#reasons h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
+}
+
+#benefits-physical > div, #benefits-mental > div {
+    margin-bottom: 20px;
+    line-height: 20px;
+}
+
+#benefits p {
+    padding: 0 20px;
+}
+
+#benefits hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
